Fix edit button icon alignment

--- a/src/app/components/friend-tooltip/friend-tooltip.component.css
+++ b/src/app/components/friend-tooltip/friend-tooltip.component.css
@@ -100,6 +100,10 @@ mat-card {
   width: 24px;
   height: 24px;
   line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .edit-button mat-icon {
@@ -107,6 +111,19 @@ mat-card {
   width: 16px;
   height: 16px;
   line-height: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.edit-button .mat-mdc-button-touch-target {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
 
 .edit-button:hover {
